...
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />

    <TextView
        android:id="@+id/profname"
        android:layout_width="286dp"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="bottom"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCourseInfo" />

    <TextView
...
